--- a/app.json
+++ b/app.json
@@ -2,14 +2,15 @@
   "pages":[
     "pages/index/index",
     "pages/discovery/discovery",
+    "pages/notify/notify",
+    "pages/chat/chat",
     "pages/more/more",
-    "pages/logs/logs",
     "pages/answer/answer",
     "pages/question/question"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#006864",
+    "navigationBarBackgroundColor": "#0068C4",
     "navigationBarTitleText": "Contributor",
     "navigationBarTextStyle":"white",
     "enablePullDownRefresh":true
@@ -21,20 +22,18 @@
     "borderStyle": "white",
     "list": [{
       "pagePath": "pages/index/index",
-      "text": "首页",  
-      "iconPath": "images/index.png",
+      "text": "首页",
+      "iconPath": "images/T-index.png",
       "selectedIconPath": "images/index_focus.png"
-    },
-    {
+    }, {
       "pagePath": "pages/discovery/discovery",
       "text": "问答",
-      "iconPath": "images/discovery.png",
+      "iconPath": "images/T-wenda.png",
       "selectedIconPath": "images/discovery_focus.png"
-    },
-    {
+    }, {
       "pagePath": "pages/more/more",
       "text": "我的页面",
-      "iconPath": "images/burger.png",
+      "iconPath": "images/T-mypage.png",
       "selectedIconPath": "images/burger_focus.png"
     }]
   },
@@ -43,5 +42,4 @@
     "downloadFile": 10000
   },
   "debug": true
-
 }
