--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.8",
 	"appid": "wxa202450726690c3f",
-	"projectname": "Contributor2",
+	"projectname": "Contributor",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
